[metadata]
name = appstore
version = attr: appstore.__version__
author = Renaissance Computing Institute
author_email = ahagerman@renci.org
description = The primary user experience component of the HeLx data science platform
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/helxplatform/appstore
project_urls =
    Bug Tracker = https://github.com/helxplatform/appstore
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers

[options]
zip_safe = False
package_dir =
    = appstore
packages = find:
python_requires = >=3.7
include_package_data = true
install_requires =
    Django~=3.1
    django-allauth==0.44.0
    django-cors-headers==3.7.0
    django-crispy-forms==1.11.2
    django-extensions==3.1.1
    django-saml2-auth==2.2.1
    djangorestframework==3.12.2
    drf-spectacular==0.15.1
    tycho-api==1.0.26
    pysaml2==6.3.1 
    python3-openid==3.1.0 
    requests==2.20.1
    requests-oauthlib==1.3.0 

[options.entry_points]
console_scripts =
    appstore=django.core.management:execute_from_command_line

[options.extras_require]
dev =
    django-debug-toolbar==3.2
    flake8==3.9.0
    selenium==3.141.0
    mock==4.0.2
    webdriver-manager==3.2.1

[options.packages.find]
where =
    appstore


[flake8]
max-line-length = 88
extend-ignore = E203, W503
